--- a/Week 1 - Berkay Yalçın/index.html
+++ b/Week 1 - Berkay Yalçın/index.html
@@ -23,75 +23,68 @@
       </style>
 </head>
 <body>
+
     <header>
-        <h1>
-            HTML Structure Template
-        </h1>
+        <h1>HTML Structure Template</h1>
     </header>
+
     <nav>
         <ul>
-           <li>
-                <a href="#">Homepage</a>
-           </li> 
-           <li>
-                <a href="#">Services</a>
-           </li> 
-           <li>
-                <a href="#">About Us</a>
-           </li> 
-           <li>
-                <a href="#">Contact</a>
-           </li> 
+           <li><a href="#">Homepage</a></li> 
+           <li><a href="#">Services</a></li> 
+           <li><a href="#">About Us</a></li> 
+           <li><a href="#">Contact</a></li> 
         </ul>
     </nav>
+
     <section>
-        <h1>
-            The Most Visited Countries
-        </h1>
+        <h1>The Most Visited Countries</h1>
+
         <article>
             <h3>France</h3>
-            <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, illum. Accusamus suscipit tenetur rerum, esse repellat sunt velit autem harum quaerat dolor a nulla obcaecati dolorum error officiis,
-            </b>
-            <i>perspiciatis consectetur pariatur at blanditiis expedita aperiam! Exercitationem aliquid tempore laboriosam libero excepturi nobis non officia,
-            </i>
-            <u>
-            quaerat laborum maxime similique dolore? Explicabo?   
-            </u> 
+            <p>
+            <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, illum. Accusamus suscipit tenetur rerum, esse repellat sunt velit autem harum quaerat dolor a nulla obcaecati dolorum error officiis,</b>
+            <i>perspiciatis consectetur pariatur at blanditiis expedita aperiam! Exercitationem aliquid tempore laboriosam libero excepturi nobis non officia,</i>
+            <u>quaerat laborum maxime similique dolore? Explicabo?</u> 
+            </p>
         </article>
+
         <article>
             <h3>Spain</h3>
-            <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, illum. Accusamus suscipit tenetur rerum, esse repellat sunt velit autem harum quaerat dolor a nulla obcaecati dolorum error officiis,
-            </b>
-            <i>perspiciatis consectetur pariatur at blanditiis expedita aperiam! Exercitationem aliquid tempore laboriosam libero excepturi nobis non officia,
-            </i>
-            <u>
-            quaerat laborum maxime similique dolore? Explicabo?    
-            </u> 
+            <p>
+            <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, illum. Accusamus suscipit tenetur rerum, esse repellat sunt velit autem harum quaerat dolor a nulla obcaecati dolorum error officiis,</b>
+            <i>perspiciatis consectetur pariatur at blanditiis expedita aperiam! Exercitationem aliquid tempore laboriosam libero excepturi nobis non officia,</i>
+            <u>quaerat laborum maxime similique dolore? Explicabo?</u> 
+            </p>
         </article>
     </section>
+
     <section>
-        <h1>
-        Contact
-        </h1>
+        <h1>Contact</h1>
+        
         <form action="">
             <label for="name">Name:</label>
-            <input type="text" name="name" id="name" placeholder="Required">
+            <input type="text" name="name" id="name" placeholder="Required" required>
+
             <label for="surname">Surname:</label>
-            <input type="text" name="surname" id="surname" placeholder="Required">
+            <input type="text" name="surname" id="surname" placeholder="Required" required>
+
             <label for="name">Mail:</label>
-            <input type="text" name="mail" id="mail" placeholder="Required">
+            <input type="text" name="mail" id="mail" placeholder="Required" required>
+
             <label for="name">Subject:</label>
-            <input type="text" name="subject" id="subject" placeholder="Required">
+            <input type="text" name="subject" id="subject" placeholder="Required" required>
+
             <label for="name">Subject:</label>
             <input type="checkbox" name="subject" id="subject" placeholder="Required">
+            
             <input type="submit" value="Clear">
             <input type="submit" value="Send">
         </form>
     </section>
+
     <footer>
-        <p>
-        © 2022 Tüm Hakları Saklıdır.
-        </p>
+        <p> © 2022 Tüm Hakları Saklıdır.</p>
     </footer>
 </body>
 </html>
